--- a/vercel.json
+++ b/vercel.json
@@ -6,13 +6,8 @@
     }
   ],
   "routes": [
-    {
-      "src": "/api/(.*)",
-      "dest": "/api.py"
-    },
-    {
-      "src": "/(.*)",
-      "dest": "/index.html"
-    }
+    { "src": "/match_vaga", "dest": "/api.py" },
+    { "src": "/match_vagas", "dest": "/api.py" },
+    { "src": "/(.*)", "dest": "/index.html" }
   ]
 }
