--- a/vercel.json
+++ b/vercel.json
@@ -1,13 +1,8 @@
 {
-  "builds": [
-    {
-      "src": "/api.py",
-      "use": "@vercel/python"
-    }
-  ],
   "routes": [
-    { "src": "/match_vaga", "dest": "/api.py" },
-    { "src": "/match_vagas", "dest": "/api.py" },
-    { "src": "/(.*)", "dest": "/index.html" }
+    {
+      "src": "/(.*)",
+      "dest": "/index.html"
+    }
   ]
 }
