--- a/vercel.json
+++ b/vercel.json
@@ -1,12 +1,12 @@
 {
   "routes": [
     {
-      "source": "/api/(.*)",
-      "destination": "api/index.py"
+      "src": "/api/(.*)",
+      "dest": "api/index.py"
     },
     {
-      "source": "/(.*)",
-      "destination": "index.html"
+      "src": "/(.*)",
+      "dest": "index.html"
     }
   ]
-}
+} 
