--- a/vercel.json
+++ b/vercel.json
@@ -1,12 +1,5 @@
 {
-  "routes": [
-    {
-      "src": "/api/(.*)",
-      "dest": "api/index.py"
-    },
-    {
-      "src": "/(.*)",
-      "dest": "index.html"
-    }
+  "rewrites": [
+    { "source": "/", "destination": "index.html" }
   ]
 }
