fix: Alinha as rotas entre o frontend e o backend

--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,16 @@
 {
   "routes": [
-    { "src": "/", "dest": "index.html" }
+    {
+      "src": "/match_vaga",
+      "dest": "index.py"
+    },
+    {
+      "src": "/match_vagas",
+      "dest": "index.py"
+    },
+    {
+      "src": "/(.*)",
+      "dest": "src/index.html"
+    }
   ]
 }
